# clash-of-crowns

./: .dockerignore  .env.example  .gitignore  Dockerfile.node  Dockerfile.rust  IMPLEMENTATION_PLAN.txt  README.md  capacitor.config.json  final_report_phase8_completed.md  firebase-blueprint.json  firebase.json  fix_benchmark.py  index.html  metadata.json  package-lock.json  package.json  render.yaml  server.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.firebase/: hosting.ZGlzdA.cache
.github/workflows/: deploy.yml
android/app/: build.gradle
docs/: README.md
docs/android/: CAPACITOR_FULLSCREEN_FIX.md  CAPACITOR_MOBILE_TESTING.md  README_ANDROID.md
docs/architecture/: AI_RULES.md  (+7 more)
firebase/: firestore.rules
scripts/: update_characters.ts
src/: App.tsx  firebase.ts  index.css
src-rust/: .env.example  Cargo.toml  README.md
src-rust/src/: config.rs  main.rs  state.rs
src-rust/src/auth/: token.rs
src-rust/src/chess/: mod.rs  move_validator.rs
src-rust/src/engine/: benchmark.rs  handlers.rs  hce.rs  mod.rs  move_ordering.rs  negamax.rs  pst.rs  quiescence.rs  tests.rs
src-rust/src/engine/nnue/: features.rs  mod.rs  model.rs  weights.rs
src-rust/src/presence/: heartbeat.rs
src-rust/src/ranked/: elo.rs  mod.rs  ranked_guard.rs  ranked_result.rs  ranked_types.rs
src-rust/src/rooms/: mod.rs  room_errors.rs  room_manager.rs  room_state.rs
src-rust/src/tests/: mod.rs  protocol_tests.rs  rules_tests.rs
src-rust/src/ws/: connection.rs  handler.rs  mod.rs  protocol.rs
src-rust/wasm-engine/: Cargo.toml
src-rust/wasm-engine/src/: lib.rs
(+373 files in other folders)
